# rdws_us

./: .clang-tidy  .editorconfig  .env.dev  .gitignore  .gitmodules  CMakeLists.txt  README.md  example_services.json
src/: greeting.cpp  main.cpp
src/greeting_app/: CMakeLists.txt  greeting.cpp  greeting.hpp  main.cpp
src/greeting_app/tests/: CMakeLists.txt  greeting_test.cpp
src/loader/: CMakeLists.txt  Loader.cpp  Loader.h  README.md  Service.h  Services.cpp  Services.h  Utils.cpp  Utils.h  loader.cpp  loader.hpp  loader_services.json  main.cpp  service_manager_test.cpp  services.cpp  services.h  services.json
src/loader/Services/: Service.h  ServiceIPCConfig.h  ServiceInstance.cpp  ServiceInstance.h  ServiceManager.cpp  ServiceManager.h  Services.cpp  Services.h
src/loader/schemas/: service.h
src/loader/tests/: CMakeLists.txt  loader_test.cpp  test_service_schema.cpp  test_services_loader.cpp
src/service_broker/: CMakeLists.txt  HttpGateway.cpp  HttpGateway.h  demo_service_broker.sh  example_service_client.cpp  main.cpp  service_broker_example.cpp  service_broker_monitor.cpp  service_gateway_http.cpp
src/service_broker/Services/: ServiceBroker.cpp  ServiceBroker.h  ServiceClient.cpp  ServiceClient.h  ServiceGateway.cpp  ServiceGateway.h  ServiceIdentity.cpp  ServiceIdentity.h  ServiceMonitor.cpp  ServiceMonitor.h  ServiceRegistry.cpp  ServiceRegistry.h
src/service_broker/schemas/: service.h
src/service_broker/tests/: CMakeLists.txt  test_gateway_metrics.cpp  test_service_schema.cpp
src/services/: CMakeLists.txt  service_test_harness.cpp
src/services/example_service/: CMakeLists.txt  example_service.cpp
src/shared/: CMakeLists.txt
src/shared/config/: config.cpp  config.h
src/shared/tests/: CMakeLists.txt  test_logger.cpp  test_metrics.cpp  test_schema_validator.cpp
src/shared/types/: lambda_context.cpp  lambda_context.h  lambda_event.cpp  lambda_event.h  service_result.h
src/shared/utils/: logger.cpp  logger.h  metrics.cpp  metrics.h
src/shared/validator/: schema_validator.cpp  schema_validator.h
tests/: CMakeLists.txt  greeting_test.cpp
tools/: debug_services.sh  new_subproject.sh
